--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,19 +1,19 @@
-.App {
-    text-align: center;
-  }
-  
-.App-logo {
+.Home {
+  text-align: center;
+}
+
+.Home-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .Home-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.Home-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,7 +24,7 @@
   color: white;
 }
 
-.App-link {
+.Home-link {
   color: #61dafb;
 }
 
@@ -36,4 +36,3 @@
     transform: rotate(360deg);
   }
 }
-  
