--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -1,11 +1,7 @@
-.App {
+.Profile {
     text-align: center;
+    margin-left: 170px;
   }
-  
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,27 +9,36 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Profile-header {
+  background-color:#ffbe24ff ;
+  min-height: 9vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color:  #bc5a45;
+  background-image: linear-gradient(to bottom, #ffbe24ff,#fadd6a);
+  
 }
 
-.App-link {
+.Profile-divider{
+  color:  #bc5a45;
+}
+
+.Profile-content-background{
+  background-color: #282c34;
+  min-height: 100vh;
+ 
+}
+.Profile-content{
+  background-color: #282c34;
+  min-height: 100vh;
+  
+  font-size: calc(10px + 2vmin);
+  color:  #f18973;
+}
+
+.Profile-link {
   color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-  
