--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,5 +1,7 @@
 .Home {
   text-align: center;
+  margin-left: 15%;
+  
 }
 
 .Home-logo {
@@ -12,6 +14,12 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
+.recipeCache {
+  padding-right: 5%;
+  padding-left: 5%;
+}
+
 
 .Home-header {
   background-color: #282c34;
