--- a/src/css/SideNav.css
+++ b/src/css/SideNav.css
@@ -1,13 +1,24 @@
 .sidenav {
   height: 100%;
+  width: 15%;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #232323;
+  background-color: #f18973;
   transition: 0.5s ease;
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  text-decoration-color: white;
+}
+
+.header {
+  font-family: 'Courier New', Courier, monospace;
+  font-style: italic;
+  color: white;
+  text-align: center;
 }
