Created dynamic recipe card

--- a/src/css/SideNav.css
+++ b/src/css/SideNav.css
@@ -4,10 +4,11 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #232323;
+  background-color: #946c6c;
   transition: 0.5s ease;
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 15%;
 }
