--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,5 +1,6 @@
 .Home {
   text-align: center;
+  
 }
 
 .Home-logo {
@@ -22,6 +23,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-left: 15%;
 }
 
 .Home-link {
