--- a/src/css/SideNav.css
+++ b/src/css/SideNav.css
@@ -4,7 +4,7 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #232323;
+  background-color: #ffa2a7;
   transition: 0.5s ease;
   overflow-x: hidden;
   display: flex;
