--- a/src/css/SignUp.css
+++ b/src/css/SignUp.css
@@ -1,6 +1,7 @@
 .App {
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -116,4 +117,8 @@ form .form-inner input[type="submit"]:hover {
 .welcome h2 span {
   color: #FE4800;
   font-weight: 700;
+}
+
+.error {
+  padding: 20px;
 }
