tentative login to profile

--- a/src/css/SignUp.css
+++ b/src/css/SignUp.css
@@ -68,7 +68,7 @@ form .form-inner .form-group {
 }
 
 .form-inner .form-group:focus-within label {
-  color: #FE4880;
+  color: #be2d59;
 }
 
 form .form-inner .form-group input {
