--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -127,8 +127,8 @@ form .form-inner input[type="submit"]:hover {
 }
 
 a {
-  background-color: #f77d7d;
-  color: white;
+  background-color: #f08a8a;
+  color: rgb(255, 255, 255);
   padding: 1em 1em;
   text-align: center;
   text-decoration: none;
