--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -39,7 +39,6 @@
 }
 
 .Profile-divider{
-  
   width: 3px;
   background-color: #bc5a45;
 }
@@ -47,8 +46,8 @@
 .Profile-content-background{
   background-color: #ffffff;
   min-height: 100vh;
- 
 }
+
 .Profile-content{
   background-color: #ffffff;
   min-height: 100vh;
@@ -63,5 +62,12 @@
 }
 
 .not-logged-in {
-  padding: 200px;
+  padding: 30px 0;
+  border: 3px solid rgb(253, 149, 149);
+  text-align: center;
+  display: block;
+  position: absolute;
+  top: 20%;
+  width: 50%;
+  left: 30%;
 }
