--- a/src/css/Upload.css
+++ b/src/css/Upload.css
@@ -72,16 +72,28 @@ form .form-inner .form-group {
   color: #FE4880;
 }
 
-form .form-inner .form-group input {
+form .tags {
   display:block;
   width: 100%;
   padding: 10px 15px;
   background-color: #F8F8F8;
   border-radius: 8px;
   transition: 0.4s;
+  font-size: 14px;
+}
+form .form-inner .form-group input, textarea, select {
+  display:block;
+  width: 100%;
+  padding: 10px 15px;
+  background-color: #F8F8F8;
+  border-radius: 8px;
+  transition: 0.4s;
+  resize: none;
+  border: 3px;
 }
 
-form .form-inner .form-group input:focus {
+
+form .form-inner .form-group textarea:focus, input:focus {
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
 }
 
