--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -13,7 +13,7 @@
 }
 
 .Home-header {
-  background-color: #282c34;
+  background-color: #f8cbcb;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
