--- a/src/css/About.css
+++ b/src/css/About.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-color: #ffffff;
+    background-color: #f8cbcb;
     margin-left: 15%;
     padding-left: 40px;
     padding-right: 40px;
