changed drinks/bevs tag to drinks

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -29,7 +29,7 @@
 }
 
 .Home-header h1 {
-  color: #ffffff;
+  color: #bc5a45;
   font-family: 'Courier New', Courier, monospace;
   text-align: center;
   font-style: italic;
