--- a/src/css/Upload.css
+++ b/src/css/Upload.css
@@ -169,3 +169,14 @@ a:active {
   font-weight: 500;
   margin-bottom: 30px;
 }
+
+.not-logged-in {
+  padding: 30px 0;
+  border: 3px solid rgb(253, 149, 149);
+  text-align: center;
+  display: block;
+  position: absolute;
+  top: 20%;
+  width: 50%;
+  left: 30%;
+}
