--- a/src/css/About.css
+++ b/src/css/About.css
@@ -86,3 +86,27 @@
     width: 100%;
     height: 100%;
 }
+
+.recipe-posted {
+    background-color: white;
+    padding: 30px 0;
+    border: 3px solid rgb(253, 149, 149);
+    text-align: center;
+    display: block;
+    position: absolute;
+    top: 20%;
+    width: 50%;
+    left: 30%;
+  }
+
+  .buttons {
+      margin-top: 30px;
+  }
+  .recipe-posted a {
+      display: inline;
+      width: 150px;
+      margin-top: 20px;
+      margin-left:10px;
+      margin-right:10px;
+  }
+
