--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,7 +1,7 @@
 
  
 .AboutUsPage {
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     align-items: center;
     justify-content: center;
