--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,20 +1,23 @@
 
  
 .AboutUsPage {
-    /* height: 100vh; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
     background-color: #f8cbcb;
     margin-left: 15%;
+    display: flex;
+    height: 100vh;
+    fill: #f8cbcb;
+    align-items: center;
+    justify-content: center; 
+    text-align: center;
+    background-color: #f8cbcb;
+    
     padding-left: 40px;
     padding-right: 40px;
 }
 
 .aboutHeader {
     /* background-color: #bc5a45; */
-    height:7%;
+    
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -24,12 +27,12 @@
     text-align: center;
     font-style: italic;
     font-size: 40px;
-    font-weight: 5000;
+    
     padding-bottom: 10px;
 }
 
 .aboutParagraph {
-    height:7%;
+    
     padding-top: 10px;
 }
 .aboutParagraph h2 {
@@ -49,7 +52,7 @@
 }
 
 .aboutTeam {
-    height:7%;
+    
     padding-top: 20px;
     padding-right: 40px;
     padding-left: 40px;
@@ -81,32 +84,4 @@
     color: #000000,
 }
 
-.AboutUs {
-    background-color: violet;
-    width: 100%;
-    height: 100%;
-}
-
-.recipe-posted {
-    background-color: white;
-    padding: 30px 0;
-    border: 3px solid rgb(253, 149, 149);
-    text-align: center;
-    display: block;
-    position: absolute;
-    top: 20%;
-    width: 50%;
-    left: 30%;
-  }
-
-  .buttons {
-      margin-top: 30px;
-  }
-  .recipe-posted a {
-      display: inline;
-      width: 150px;
-      margin-top: 20px;
-      margin-left:10px;
-      margin-right:10px;
-  }
 
