--- a/src/css/Upload.css
+++ b/src/css/Upload.css
@@ -92,6 +92,11 @@ form .form-inner .form-group input, textarea, select {
   border: 3px;
 }
 
+.tagsBox{
+  height: 200px;
+}
+
+
 
 form .form-inner .form-group textarea:focus, input:focus {
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
