--- a/src/css/Display.css
+++ b/src/css/Display.css
@@ -18,7 +18,7 @@
   padding-bottom: 10px;
 }
 .aboutHeader h2 {
-  color: #bc5a45;
+  color: #bc456d;
   font-family: 'Courier New', Courier, monospace;
   text-align: center;
   font-style: italic;
@@ -36,12 +36,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   font-family: 'Courier New', Courier, monospace;
-  color:  #bc5a45;
+  color:  #bc4559;
   font-style: italic;
   font-weight: bold;
   
 }
-
 
 .display-content-background{
   background-color: #f8cbcb;
@@ -56,11 +55,12 @@
 }
 
 .submit-comment-button{
-  color:whitesmoke;
+  background-color: #f88181;
   font-size: 25px;
-  border: white;
-  border-width: 20px;
-
+  height: 20px;
+  width: 200px;
+  line-height: 3px; 
+  box-sizing: border-box; 
 }
 
 .display-content{
@@ -88,7 +88,7 @@
 
 ul {
   list-style: none;
-  font-size: 22px;
+  font-size: 20px;
 }
 ul li::before {
   content: "";
@@ -104,7 +104,7 @@ ul li::before {
 
 ul li {
   border: 3px solid rgb(253, 149, 149);
-  margin-top: 2px;
+  margin-top: 5px;
   background-color:white;
   color: #bc5a45
 }
